--- a/app/assets/stylesheets/agency.css.scss
+++ b/app/assets/stylesheets/agency.css.scss
@@ -167,7 +167,7 @@ img::-moz-selection {
 header.masthead {
   text-align: center;
   color: white;
-  background-image: url("../img/headerbg.jpg");
+  background-image: image-url("headerbg.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -593,7 +593,7 @@ header.masthead .intro-text .intro-heading {
 
 section#contact {
   background-color: #212529;
-  background-image: url("../img/map-image.png");
+  background-image: image-url("map-image.png");
   background-repeat: no-repeat;
   background-position: center;
 }
