--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -10,9 +10,8 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require agency.css
- *= require_self
+ *= require agency.min.css
  */
 @import "bootstrap-sprockets";
-@import "bootstrap";
+@import "bootstrap.min.css";
 @import "font-awesome";
