use application css

--- a/app/views/layouts/pages.html.erb
+++ b/app/views/layouts/pages.html.erb
@@ -11,7 +11,7 @@
     <title>Agency - Start Bootstrap Theme</title>
 
     <!-- Bootstrap core CSS -->
-    <%= stylesheet_link_tag "pages", rel: "stylesheet"%>
+    <%= stylesheet_link_tag "application", rel: "stylesheet"%>
     <%#= stylesheet_link_tag "bootstrap.min.css", rel: "stylesheet"%>
     <%#= stylesheet_link_tag "font-awesome.min.css", rel: "stylesheet"%>
     <%#= stylesheet_link_tag "agency.min.css", rel: "stylesheet"%>
