--- a/app/views/layouts/pages.html.erb
+++ b/app/views/layouts/pages.html.erb
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Agency - Start Bootstrap Theme</title>
+    <title>TotalLogix</title>
 
     <!-- Bootstrap core CSS -->
     <%= stylesheet_link_tag "application", rel: "stylesheet"%>
