--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -239,7 +239,7 @@
         <div class="team-member">
           <%= image_tag "team/1.jpg", class: "mx-auto rounded-circle"%>
           <h4>Asnad Atta</h4>
-          <p class="text-muted">CEO/Founder</p>
+          <p class="text-muted">CEO/Co-founder</p>
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
               <a href="#">
@@ -263,7 +263,7 @@
         <div class="team-member">
           <%= image_tag "team/2.jpg", class: "mx-auto rounded-circle" %>
           <h4>Ayaz Hussain</h4>
-          <p class="text-muted">Business Analyst/Project Manager</p>
+          <p class="text-muted">Co-founder/Business Analyst</p>
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
               <a href="#">
