--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -237,7 +237,7 @@
     <div class="row">
       <div class="col-sm-4">
         <div class="team-member">
-          <%= image_tag "team/1.jpg", class: "mx-auto rounded-circle"%>
+          <%= image_tag "team/asnad.jpg", class: "mx-auto rounded-circle"%>
           <h4>Asnad Atta</h4>
           <p class="text-muted">CEO/Co-founder</p>
           <ul class="list-inline social-buttons">
