change ayaz image

--- a/app/views/pages/_team.html.erb
+++ b/app/views/pages/_team.html.erb
@@ -33,7 +33,7 @@
       </div>
       <div class="col-sm-4">
         <div class="team-member">
-          <%= image_tag "team/2.jpg", class: "mx-auto rounded-circle" %>
+          <%= image_tag "team/ayaz.jpg", class: "mx-auto rounded-circle" %>
           <h4>Ayaz Hussain</h4>
           <p class="text-muted">Co-founder/Business Analyst</p>
           <ul class="list-inline social-buttons">
