--- a/app/views/pages/_contact.html.erb
+++ b/app/views/pages/_contact.html.erb
@@ -8,11 +8,12 @@
     </div>
     <div class="row">
       <div class="col-lg-12">
-        <form id="contactForm" name="sentMessage" novalidate>
+        <%= semantic_form_for Contact.new, html: {id: "contactForm"} do |f| %>
+        <!-- <form id="contactForm" name="sentMessage" novalidate> -->
           <div class="row">
             <div class="col-md-6">
               <div class="form-group">
-                <input class="form-control" id="name" type="text" placeholder="Your Name *" required data-validation-required-message="Please enter your name.">
+                <%= f.input :name, input_html:{class: "form-control", id: "name", placeholder: "Your Name *",required: true,:wrapper_html => false, "data-validation-required-message"=>"Please enter your name."}, label: false %>
                 <p class="help-block text-danger"></p>
               </div>
               <div class="form-group">
@@ -36,7 +37,8 @@
               <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button>
             </div>
           </div>
-        </form>
+        <!-- </form> -->
+        <% end %>
       </div>
     </div>
   </div>
