--- a/app/views/pages/_contact.html.erb
+++ b/app/views/pages/_contact.html.erb
@@ -9,7 +9,6 @@
     <div class="row">
       <div class="col-lg-12">
         <%= semantic_form_for Contact.new, html: {id: "contactForm"} do |f| %>
-        <!-- <form id="contactForm" name="sentMessage" novalidate> -->
           <div class="row">
             <div class="col-md-6">
               <div class="form-group">
@@ -18,12 +17,10 @@
               </div>
               <div class="form-group">
                 <%= f.input :email, input_html:{class: "form-control",  placeholder: "Your Email *",required: true,:wrapper_html => false, "data-validation-required-message"=>"Please enter your email address."}, label: false %>
-                <!-- <input class="form-control" id="email" type="email" placeholder="Your Email *" required data-validation-required-message=""> -->
                 <p class="help-block text-danger"></p>
               </div>
               <div class="form-group">
                 <%= f.input :phone, input_html:{class: "form-control",  placeholder: "Your Phone *",required: true,:wrapper_html => false, "data-validation-required-message"=>"Please enter your phone number."}, label: false %>
-                <!-- <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" required data-validation-required-message=""> -->
                 <p class="help-block text-danger"></p>
               </div>
             </div>
@@ -31,18 +28,15 @@
               <div class="form-group">
                 <%= f.input :message, input_html:{class: "form-control", placeholder: "Your Message *",required: true,:wrapper_html => false, "data-validation-required-message"=>"Please enter a message."}, label: false %>
 
-                <!-- <textarea class="form-control" id="message" placeholder="Your Message *" required data-validation-required-message=""></textarea> -->
                 <p class="help-block text-danger"></p>
               </div>
             </div>
             <div class="clearfix"></div>
             <div class="col-lg-12 text-center">
               <div id="success"></div>
-              <%= f.submit "Send Message", class: " btn-xl text-uppercase btn btn-primary",id: "" %>
-              <!-- <button  class="btn btn-primary" type="submit">Send Message</button> -->
+              <%= f.submit "Send Message", class: " btn-xl text-uppercase btn btn-primary",id: "sendMessageButton" %>
             </div>
           </div>
-        <!-- </form> -->
         <% end %>
       </div>
     </div>
