some cms contetns for home page

--- a/app/views/pages/_services.html.erb
+++ b/app/views/pages/_services.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading text-uppercase">Services</h2>
-        <h3 class="section-subheading text-muted">We are proud to help our clients in..</h3>
+        <h3 class="section-subheading text-muted"><%= @contents.service_upper_text %></h3>
       </div>
     </div>
     <div class="row text-center">
