--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,8 @@
 <header class="masthead">
   <div class="container">
     <div class="intro-text">
-      <div class="intro-lead-in">Welcome To Your Solution!</div>
-      <div class="intro-heading text-uppercase">We love to build fabolous systems</div>
+      <div class="intro-lead-in"><%= @contents.main_heading %></div>
+      <div class="intro-heading text-uppercase"><%= @contents.slogan %></div>
       <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
     </div>
   </div>
