--- a/app/views/pages/_team.html.erb
+++ b/app/views/pages/_team.html.erb
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-        <h3 class="section-subheading text-muted">Let us indroduce our shining stars</h3>
+        <h2 class="section-heading text-uppercase"><%= @contents.team_heading %></h2>
+        <h3 class="section-subheading text-muted"><%= @contents.team_upper_text %></h3>
       </div>
     </div>
     <div class="row">
@@ -82,7 +82,7 @@
     </div>
     <div class="row">
       <div class="col-lg-8 mx-auto text-center">
-        <p class="large text-muted">Our team is responsible to delevier the best product for our clients. Team is trained to follow agile development methodoly through out the software development lifecycle.</p>
+        <p class="large text-muted"><%=@contents.team_description %></p>
       </div>
     </div>
   </div>
