--- a/app/views/pages/_about.html.erb
+++ b/app/views/pages/_about.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading text-uppercase">About</h2>
+        <h2 class="section-heading text-uppercase"><%= @contents.about_us_heading%></h2>
         <h3 class="section-subheading text-muted"><%= @contents.about_us_upper_text %></h3>
       </div>
     </div>
