--- a/app/views/pages/_services.html.erb
+++ b/app/views/pages/_services.html.erb
@@ -7,30 +7,16 @@
       </div>
     </div>
     <div class="row text-center">
-      <div class="col-md-4">
-        <span class="fa-stack fa-4x">
-          <i class="fa fa-circle fa-stack-2x text-primary"></i>
-          <i class="fa fa-mobile fa-stack-1x fa-inverse"></i>
-        </span>
-        <h4 class="service-heading">Mobile Apps</h4>
-        <p class="text-muted">In the age of mobile apps we are happy to build IOS and android apps for our clients.</p>
-      </div>
-      <div class="col-md-4">
-        <span class="fa-stack fa-4x">
-          <i class="fa fa-circle fa-stack-2x text-primary"></i>
-          <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-        </span>
-        <h4 class="service-heading">Web Development</h4>
-        <p class="text-muted">We work on modern technologies to build fabulous web applications in Ruby on Rails, PHP and dot net.</p>
-      </div>
-      <div class="col-md-4">
-        <span class="fa-stack fa-4x">
-          <i class="fa fa-circle fa-stack-2x text-primary"></i>
-          <i class="fa fa-sitemap fa-stack-1x fa-inverse"></i>
-        </span>
-        <h4 class="service-heading">Network Solutions</h4>
-        <p class="text-muted">Do you have a problem in your local network we can solve it we have champtions network configuration specialist.</p>
-      </div>
+      <% @services.each_with_index do |service, index| %>
+        <div class="col-md-4">
+          <span class="fa-stack fa-4x">
+            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+            <i class="fa <%= service.icon %> fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4 class="service-heading"><%= service.heading %></h4>
+          <p class="text-muted"><%= service.description %></p>
+        </div>
+      <% end %>
     </div>
   </div>
 </section>
